# midori

./: .flake8  CHANGELOG.rst  CODE_OF_CONDUCT.rst  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/reference/: models.rst
midori/: __init__.py  auth.py  error.py
midori/auth/: __init__.py  base.py  cache.py  common.py  console.py  local.py  util.py
midori/models/: __init__.py  album.py  artist.py  audio_features.py  base.py  category.py  context.py  copyright.py  currently_playing.py  device.py  episode.py  error.py  external.py  member.py  paging.py  play_history.py  playlist.py  recommendations.py  restriction.py  show.py  track.py  user.py
tests/: test_auth.py  test_midori.py  test_models.py
tests/auth/: test_base.py  test_cache.py  test_console.py  test_local.py
